fix too big space above image in outlook

--- a/test/dummy/app/components/dummy/mailer/cards/lot_component.sass
+++ b/test/dummy/app/components/dummy/mailer/cards/lot_component.sass
@@ -60,7 +60,7 @@ $dummy-mailer-styles: false !default
 
     &__title-block
       font-size: 0
-      padding: $mailer-gap-d 0 0 0
+      padding: 0
 
     &__button-block
       font-size: 0
@@ -72,6 +72,7 @@ $dummy-mailer-styles: false !default
     &__author
       +mailer-font-size-display-s
       font-weight: $font-weight-bold
+      margin: $mailer-gap-d 0 0 0
 
     &__name
       +mailer-font-size-text-xl
